<resources>
  <string name="app_name">NTM Note</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="title_activity_settings">Settings</string>

  <!-- Strings related to Settings -->

  <!-- Example General settings -->
  <string name="pref_header_general">General</string>

  <string name="pref_title_social_recommendations">Enable social recommendations</string>
  <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message
    history
  </string>

  <string name="pref_title_display_name">Display name</string>
  <string name="pref_default_display_name">John Smith</string>

  <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
  <string-array name="pref_example_list_titles">
    <item>Always</item>
    <item>When possible</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_example_list_values">
    <item>1</item>
    <item>0</item>
    <item>-1</item>
  </string-array>

  <!-- Example settings for Data & Sync -->
  <string name="pref_header_data_sync">Data &amp; sync</string>

  <string name="pref_title_sync_frequency">Sync frequency</string>
  <string-array name="pref_sync_frequency_titles">
    <item>15 minutes</item>
    <item>30 minutes</item>
    <item>1 hour</item>
    <item>3 hours</item>
    <item>6 hours</item>
    <item>Never</item>
  </string-array>
  <string-array name="pref_sync_frequency_values">
    <item>15</item>
    <item>30</item>
    <item>60</item>
    <item>180</item>
    <item>360</item>
    <item>-1</item>
  </string-array>

  <string-array name="list_preference_entries">
    <item>Entry 1</item>
    <item>Entry 2</item>
    <item>Entry 3</item>
  </string-array>

  <string-array name="list_preference_entry_values">
    <item>1</item>
    <item>2</item>
    <item>3</item>
  </string-array>

  <string-array name="multi_select_list_preference_default_value" />

  <string name="pref_title_system_sync_settings">System sync settings</string>

  <!-- Example settings for Notifications -->
  <string name="pref_header_notifications">Notifications</string>

  <string name="pref_title_new_message_notifications">New message notifications</string>

  <string name="pref_title_ringtone">Ringtone</string>
  <string name="pref_ringtone_silent">Silent</string>

  <string name="pref_title_vibrate">Vibrate</string>

  <string name="no_notes_main">没有备忘记录！</string>
  <string name="no_alarm_notes_main">没有提醒记录！</string>
  <string name="no_archived_notes_main">没有归档记录！</string>
  <string name="no_deleted_notes_main">没有删除记录！</string>

  <string name="no_notes_sub">现在来添加一个吧</string>
  <string name="action_filter">过滤</string>
  <string name="action_search">Search</string>
  <string name="delete">删除</string>
  <string name="title_activity_modify_note">ModifyNoteActivity</string>
  <string name="note_content">备忘内容</string>
  <string name="label_created_time">创建于</string>
  <string name="label_last_modified_time">修改于</string>
  <string name="note_label">备忘标题</string>
  <string name="hint_note_content">在这输入备忘内容</string>

  <string name="all_notes_filter_label">全部备忘项目</string>
  <string name="alarm_notes_filter_label">全部提醒项目</string>
  <string name="archived_notes_filter_label">全部归档项目</string>
  <string name="deleted_notes_filter_label">全部删除项目</string>

  <string name="action_done">完成</string>
  <string name="label_alarm_time">提醒我</string>
  <string name="action_archive">已归档</string>
  <string name="action_delete">已移入回收站</string>
  <string name="action_activate">已恢复</string>
  <string name="action_note_saved">笔记已保存</string>
  <string name="action_note_updated">笔记已更新</string>
  <string name="menu_action_change_layout">变更布局</string>
  <string name="note_missing">没有笔记内容</string>
  <string name="statistics_activity_title">统计</string>

  <string name="statistics_total_note">笔记总数</string>
  <string name="statistics_alarm_note">提醒总数</string>
  <string name="statistics_archived_note">归档总数</string>
  <string name="statistics_deleted_note">删除总数</string>
  <string name="title_activity_login">登录</string>
  <!-- Strings related to login -->
  <string name="prompt_username">用户名</string>
  <string name="prompt_password">密码</string>
  <string name="action_sign_in">登录</string>
  <string name="action_sign_up">注册</string>
  <string name="error_invalid_username">用户名不可用</string>
  <string name="error_invalid_password">密码太弱</string>
  <string name="error_incorrect_password">密码不正确</string>
  <string name="error_field_required">这块必填</string>
</resources>
