<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/refresh_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".notes.NotesFragment">

  <RelativeLayout
    android:id="@+id/tasksContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <LinearLayout
      android:id="@+id/notes_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

      <TextView
        android:id="@+id/filteringLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/list_item_padding"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/list_item_padding"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="center_vertical"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        android:text="@string/all_notes_filter_label" />

      <android.support.v7.widget.RecyclerView
        android:id="@+id/notes_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:itemCount="7"
        tools:layoutManager="android.support.v7.widget.GridLayoutManager"
        tools:listitem="@layout/note_item"
        tools:spanCount="2" />
    </LinearLayout>

    <LinearLayout
      android:id="@+id/no_notes_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:orientation="vertical">

      <ImageView
        android:id="@+id/noNotesIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="center"
        android:tint="@color/colorAccent"
        android:src="@drawable/ic_fab_main_plus" />

      <TextView
        android:id="@+id/noNotesMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/list_item_padding"
        android:text="@string/no_notes_main" />

      <TextView
        android:id="@+id/noNotesSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/no_notes_sub" />

    </LinearLayout>
  </RelativeLayout>
</android.support.v4.widget.SwipeRefreshLayout>

